August 28, 2024 - fixing spacing on photo gallery
More improvements to the spacing of the photo gallery

--- a/css/style.css
+++ b/css/style.css
@@ -1230,20 +1230,31 @@
 					grid-template-columns: repeat(3, 1fr);
 					gap: 10px;
 					padding: 10px;
-					margin-top: -80px;
+					margin-top: -70px;
 				}
 				
 				.gallery-item {
-					overflow: hidden;
+					/*overflow: hidden;
 					height: 300px;
 					display: flex;
     				justify-content: center;
-    				align-items: center;
+    				align-items: center;*/
+					position: relative;
+					width: 100%;
+					padding-top: 66.67%; /* 3:2 aspect ratio (2/3 = 66.67%) */
+    				overflow: hidden;
 				}
 				
 				.gallery-item img {
-					width: 100%;
+					/*width: 100%;
 					height: auto;
+					object-fit: cover;
+					display: block;*/
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
 					object-fit: cover;
 					display: block;
 					
